2007-03-07 [wwp]	2.8.1cvs3

	* src/quote_fmt.c
	* src/quote_fmt_lex.l
	* src/quote_fmt_parse.y
		Add a new quote format symbol: %A to insert the
		sender email address (just the address itself).

2007-03-06 [wwp]	2.8.1cvs2

	* src/gtk/gtkutils.c
	* src/plugins/trayicon/trayicon_prefs.h
	* src/plugins/trayicon/trayicon_prefs.c
	* src/plugins/trayicon/trayicon.c
	* src/mainwindow.h
	* src/mainwindow.c
		Add a new trayicon (optional) feature: minimize to tray. When enabled,
		minimizing Claws-Mail main window will hide it to the trayicon instead.


2007-03-06 [paul]	2.8.1cvs1

	* NEWS
	* README
	* RELEASE_NOTES
	* configure.ac
		bump version number following
		stable release

2007-03-06 [paul]	2.8.0cvs24

	* po/cs.po
		corrected by by Tim <timbrain@post.cz>

2007-03-05 [colin]	2.8.0cvs23

	* src/Makefile.am
	* src/procmime.c
		Fix mime/globs path on NetBSD
		patch by George Michaelson

2007-03-05 [wwp]	2.8.0cvs22

	* src/addr_compl.c
		Remove debug statement (accidentally committed w/ cvs14).

2007-03-05 [paul]	2.8.0cvs21

	* src/plugins/pgpcore/prefs_gpg.c
		fix compiler warning

2007-03-05 [wwp]	2.8.0cvs20

	* src/matcher_parser_parse.y
		Fix mismerge between cvs17 and cvs19.

2007-03-05 [wwp]	2.8.0cvs19

	* src/matcher_parser_parse.y
	* src/prefs_filtering_action.c
	* src/matcher.c
	* src/matcher.h
	* src/filtering.c
	* src/filtering.h
		Add new 'add_to_addressbook' filtering/processing action.

2007-03-05 [wwp]	2.8.0cvs18

	* src/filtering.c
		Fix mark_as_ham filtering/processing action: spam flag
		was not unset.

2007-03-04 [colin]	2.8.0cvs17

	* src/filtering.c
	* src/matcher.c
	* src/matcher.h
	* src/matcher_parser_parse.y
	* src/prefs_filtering_action.c
		Add 'Mark as spam' and 'Mark as ham' filtering
		actions. Fixes bug 1138.

2007-03-04 [colin]	2.8.0cvs16

	* src/imap.c
		Fix bug 1140, wrong return value
		without libetpan

2007-03-04 [wwp]	2.8.0cvs15

	* src/addr_compl.c
		Rollback cvs14: don't free stuff that is managed in g_list.
