@@ -2420,3 +2420,4 @@
 ( cvs diff -u -r 1.42.2.28 -r 1.42.2.29 NEWS;  cvs diff -u -r 1.8.2.32 -r 1.8.2.33 README;  cvs diff -u -r 1.1.2.17 -r 1.1.2.18 RELEASE_NOTES;  cvs diff -u -r 1.654.2.2473 -r 1.654.2.2474 configure.ac;  ) > 2.8.1cvs1.patchset
 ( cvs diff -u -r 1.5.2.54 -r 1.5.2.55 src/gtk/gtkutils.c;  cvs diff -u -r 1.1.2.2 -r 1.1.2.3 src/plugins/trayicon/trayicon_prefs.h;  cvs diff -u -r 1.1.2.3 -r 1.1.2.4 src/plugins/trayicon/trayicon_prefs.c;  cvs diff -u -r 1.14.2.52 -r 1.14.2.53 src/plugins/trayicon/trayicon.c;  cvs diff -u -r 1.39.2.32 -r 1.39.2.33 src/mainwindow.h;  cvs diff -u -r 1.274.2.176 -r 1.274.2.177 src/mainwindow.c;  ) > 2.8.1cvs2.patchset
 ( cvs diff -u -r 1.8.2.14 -r 1.8.2.15 src/quote_fmt.c;  cvs diff -u -r 1.8.2.8 -r 1.8.2.9 src/quote_fmt_lex.l;  cvs diff -u -r 1.22.2.27 -r 1.22.2.28 src/quote_fmt_parse.y;  ) > 2.8.1cvs3.patchset
+( cvs diff -u -r 1.27.2.34 -r 1.27.2.35 src/addr_compl.c;  cvs diff -u -r 1.8.2.9 -r 1.8.2.10 src/addr_compl.h;  cvs diff -u -r 1.60.2.28 -r 1.60.2.29 src/filtering.c;  ) > 2.8.1cvs4.patchset
