@@ -25,6 +25,7 @@
 
 gint start_address_completion		(gchar *folderpath);
 guint complete_address			(const gchar *str);
+guint complete_matches_found				(const gchar *str);
 gchar *get_complete_address		(gint index);
 gint invalidate_address_completion	(void);
 gint end_address_completion		(void);
