@@ -1,3 +1,11 @@
+2007-03-09 [wwp]	2.8.1cvs4
+
+	* src/addr_compl.c
+	* src/addr_compl.h
+	* src/filtering.c
+		Optimize matching of addresses in the addressbook
+		(filtering/processing 'found_in_addressbook' condition).
+
 2007-03-07 [wwp]	2.8.1cvs3
 
 	* src/quote_fmt.c
